Fix ordering of costs